# agent-city

./: .gitignore  FEDERATION_ARCHITECT_DISPATCH.md  LICENSE  MASTERPLAN_GITHUB_FIRST.md  MISSIONS.md  PLAN.md  README.md  pyproject.toml  split.py  walkthrough.md
.well-known/: agent-federation.json
broadcasts/: pending_missions.json
campaigns/: default.json
city/: access.py  addressing.py  agent_nadi.py  agent_runtime.py  attention.py  bank.py  bounty.py  brain.py  brain_action.py  brain_cell.py  brain_context.py  brain_digest.py  brain_gates.py  brain_memory.py  brain_prompt.py  brain_voice.py  browser_factory.py  campaigns.py  cartridge_factory.py  cartridge_loader.py  city_builder.py  city_registry.py  civic_protocol.py  claims.py  cognition.py  community_triage.py  contracts.py  council.py  daemon.py  deliberation_engine.py  diagnostics.py  diagnostics_bounty_hook.py  discovery_ledger.py  discussions_bridge.py  discussions_commands.py  discussions_inbox.py  discussions_intent.py  discussions_state.py  executor.py  factory.py  (+75 more)
config/: __init__.py  city.yaml  llm.yaml
data/: bridge_state.json  campaigns_state.json  city.db  city_state.json  council_state.json  economy.db  mayor_state.json  pokedex.db  pokedex.json  registry.json
docs/: AGENT_CITY_SYSTEM_BLUEPRINT.md  AGENT_LIFECYCLE_INTEGRATION.md  AGENT_WORLD_BLUEPRINT.md  BRAIN_REVIEW_PHASE6.md  CAMPAIGN_SANKALPA_ARCHITECTURE.md  CONSTITUTION.md  FEDERATION_DELEGATION_SLICE_02_IMPLEMENTATION_REVIEW.md  FEDERATION_DELEGATION_SLICE_03_IMPLEMENTATION_PLAN.md  FEDERATION_DELEGATION_SLICE_03_IMPLEMENTATION_REVIEW.md  FEDERATION_DELEGATION_SLICE_03_WORK_ITEM_SURFACE_RECON.md  FEDERATION_DELEGATION_WIRING_MANIFEST_01.json  FEDERATION_DELEGATION_WIRING_MANIFEST_02.json  FEDERATION_DELEGATION_WIRING_MANIFEST_03.json  FEDERATION_RECRUITMENT.md  FEDERATION_SLICE_04_CROSS_REPO_PROTOCOL_EXECUTION_RECON.md  FORK_WORKFLOW.md  GITHUB_MEMBRANE_ARCHITECTURE.md  IMMIGRATION_PROTOCOL.md  MAINTENANCE_BASELINE_22_TRIAGE.md  MAINTENANCE_CAMPAIGN_RECRUITMENT_BASELINE.json  MAINTENANCE_CAMPAIGN_RECRUITMENT_RECON_FIX.md  MAINTENANCE_FINDING_CAMPAIGN_RECRUITMENT_IMPORT.md  MAINTENANCE_SLICE_A1_IMPLEMENTATION_PLAN.md  MAINTENANCE_SLICE_A_CLI_TEST_GATE_RECON.md  PHASE2_FEDERATION_DELEGATION_SLICE_02_STATUS.md  PHASE2_FEDERATION_DELEGATION_SLICE_03_STATUS.md
scripts/: audit_imports.py  build_wiki.py  campaigns.py  heartbeat.py  import_census.py  live_fire_step8.py  mass_census.py  nadi_bridge.py  publish_wiki.py  verify_local_heartbeat.py
tests/: conftest.py  e2e_live_pr_gate.py  test_agent_nadi.py  test_agent_pr_workflow.py  test_agent_spec.py  test_autonomy_loop.py  test_brain.py  test_brain_action.py  test_claims.py  (+106 more)
(+185 files in other folders)
