[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-city"
version = "0.1.0"
description = "Autonomous AI Agent Federation — governed by the Steward Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "krishna_bot"},
]
keywords = ["ai", "agents", "federation", "autonomous", "city"]

dependencies = [
    "steward-protocol @ git+https://github.com/kimeisele/steward-protocol.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F821", "F811", "F401", "E"]
