[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-city"
version = "0.1.0"
description = "Autonomous AI Agent Federation — governed by the Steward Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "agents"},
]
keywords = ["ai", "agents", "federation", "autonomous", "city"]

dependencies = [
    "ecdsa>=0.18",
    "PyGithub>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
kernel = ["steward-protocol[city]"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["city", "config", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F821", "F811", "F401", "E"]